UI button text selecting is broken by text offset #75749

Closed
opened 2020-04-15 15:21:06 +02:00 by Kim Geonwoo · 6 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.75

Blender Version
Broken: version: 2.83 (sub 13), branch: master, commit date: 2020-04-15 10:36, hash: 6547d9d3e2

Short description of error
Text selection is broken by text offset.
Non utf8 text acts like utf8 text when offset is set.

Exact steps for others to reproduce the error
On the default startup.
Paste "ㅁㅁㅁㅁㅁㅁasㅁbbbbbb" on the serchbox.
Try selecting "a" by the mouse, then "asㅁ" will be selected.
Type a letter next to "ㅁ", This will break the text.

Desktop 2020.04.15 - 22.14.34.04 (online-video-cutter.com).mp4

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.75 **Blender Version** Broken: version: 2.83 (sub 13), branch: master, commit date: 2020-04-15 10:36, hash: `6547d9d3e2` **Short description of error** Text selection is broken by text offset. Non utf8 text acts like utf8 text when offset is set. **Exact steps for others to reproduce the error** On the default startup. Paste "ㅁㅁㅁㅁㅁㅁasㅁbbbbbb" on the serchbox. Try selecting "a" by the mouse, then "asㅁ" will be selected. Type a letter next to "ㅁ", This will break the text. [Desktop 2020.04.15 - 22.14.34.04 (online-video-cutter.com).mp4](https://archive.blender.org/developer/F8474504/Desktop_2020.04.15_-_22.14.34.04__online-video-cutter.com_.mp4)
Author

Added subscriber: @skyjib

Added subscriber: @skyjib
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm.

Can confirm.

This issue was referenced by 1625b7c37c

This issue was referenced by 1625b7c37c2655d5405f7e6a8158950761e678fe

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2020-04-24 10:14:26 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75749
No description provided.