Fix T75749: UI button text selecting is broken by text offset